fix parallax header and blog excerpt text overflow

--- a/sass/pages/_single-custom.scss
+++ b/sass/pages/_single-custom.scss
@@ -19,7 +19,12 @@ $modal-bg: #000;
   }
 }
 
-section.page-title { background-size: 168% !important; }
+section.page-title { 
+  background-size: 168% !important; 
+  @include media("mobile") {
+    background-size: cover !important;
+  }
+}
 
 .single {
   .logo-header { display: none; }
@@ -29,9 +34,7 @@ section.page-title { background-size: 168% !important; }
     .grid-container {
       grid-template-rows: 0 2rem auto 1fr;
     }
-      @include media("mobile") {
-        background-size: cover !important;
-      }
+    &.page-title { 
       .white-text { display: none; }
       ~ .hentry {
         .watermark svg { fill: hsla(0, 0%, 100%, 0.2); }
